--- a/mobile_covers.html
+++ b/mobile_covers.html
@@ -103,7 +103,8 @@
             <a href="https://amzn.to/4kcpvfo" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/71Rrk+xbZSL._SX522_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/71Rrk+xbZSL._SX522_.jpg" alt="Complete Protection Flip Case for Samsung Galaxy
+                            M04 / F04 / A04e"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -119,7 +120,8 @@
             <a href="https://amzn.to/4t82uOG" class="product-card-link">
                 <div class="product-card">
                     <div class="product-image-container">
-                        <img src="https://m.media-amazon.com/images/I/61pWH3nu0YL._SX522_.jpg" alt="Mobile"
+                        <img src="https://m.media-amazon.com/images/I/61pWH3nu0YL._SX522_.jpg" alt="Mobile flip Cover for Oppo Reno 15 5G Back Cover
+                            | Premium Protective Mobile Case"
                             class="product-image">
                     </div>
                     <div class="product-info">
@@ -137,7 +139,8 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71rWAsKgNlL._SX679_.jpg
-" alt="Mobile" class="product-image">
+" alt="Case for Redmi 12 5G /
+                            Poco M6 Pro" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Complete Protection Flip Case for Redmi 12 5G /
@@ -155,7 +158,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71SjHKm-OtL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="over for Mi Redmi 12 5G" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>WOW IMAGINE Shock Proof Flip Cover Back Case
@@ -174,11 +177,10 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71BObKFUMZL._SX679_.jpg
-" alt="Mobile" class="product-image">
+" alt="Case for Samsung Galaxy" class="product-image">
                     </div>
                     <div class="product-info">
-                        <h3>Complete Protection Flip Case for Samsung Galaxy
-                            M35 5G (Blue)
+                        <h3>Complete Protection Flip Case for Samsung Galaxy M35 5G (Blue)
                         </h3>
                         <div class="price-section">
                             <span class="mrp">₹999</span>
@@ -192,7 +194,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/81E1hAJyroL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Mobile Cover for iPhone 15 PRO MAX" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>PULOKA - Mobile Cover for iPhone 15 PRO MAX -
@@ -210,7 +212,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/81-jE8vZ7HL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Mobile Back Cover" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>PULOKA Magfit Mobile Back Cover - Compatible
@@ -228,7 +230,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/6137IhApJvL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt=" Poco C31 (4G) Flip Cover" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>CEDO Redmi 10A / Poco C31 (4G) Flip Cover |
@@ -246,7 +248,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/81pJIyRoKoL._SX569_.jpg
-" alt="Mobile" class="product-image">
+" alt="Cover for Samsung F62" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Zapcase Back Case Cover for Samsung F62 /
@@ -266,7 +268,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71t2e2uXThL._SX679_.jpg
-" alt="Mobile" class="product-image">
+" alt="Mobile Cover" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Mobile Cover (Soft, Flexible & Kickstand Back
@@ -284,7 +286,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71lGlbVDomL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Samsung Galaxy back cover" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Complete Protection Flip Case for Samsung Galaxy
@@ -302,7 +304,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71BObKFUMZL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Flip Case for Samsung Galaxy" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Complete Protection Flip Case for Samsung Galaxy
@@ -320,7 +322,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71ZccZcoxsL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Complete Protection Flip Case for Samsung" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Complete Protection Flip Case for Samsung Galaxy
@@ -338,7 +340,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/61IDCGV20jL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Case for Samsung Galaxy M36 5G" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>WOW IMAGINE Shock Proof Clear Protective Back
@@ -356,7 +358,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/61+VcFpzfwL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Cover for Redmi A4 5G | Poco C75 5G | 14C 5G" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>WOW IMAGINE Shock Proof Flip Cover Back Case
@@ -375,7 +377,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/610wBu-e1tL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Mobile flip Cover for OnePlus 15R" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Mobile flip Cover for OnePlus 15R Flip Magnet
@@ -393,7 +395,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/71U8uJuiNrL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Excelsior Flip Cover for Samsung Galaxy A17," class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Excelsior Flip Cover for Samsung Galaxy A17, F17
@@ -412,7 +414,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/718oL+-8cdL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Cover for Xiaomi Mi Redmi 13C 5G " class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>WOW IMAGINE Shock Proof Flip Cover Back Case
@@ -430,7 +432,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/61Ai1YdNXIL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Cover | Camera Bump Protection" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>CEDO Samsung Galaxy M31 / F41 / M31 Prime Back
@@ -448,7 +450,7 @@
                 <div class="product-card">
                     <div class="product-image-container">
                         <img src="https://m.media-amazon.com/images/I/817cU8ypfqL._SX522_.jpg
-" alt="Mobile" class="product-image">
+" alt="Vivo Y17S Flip Back Cover Case" class="product-image">
                     </div>
                     <div class="product-info">
                         <h3>Vivo Y17S Flip Back Cover Case | Denim Fabric |
