--- a/index.html
+++ b/index.html
@@ -126,6 +126,45 @@
         </div>
     </section>
 
+<section id="ak-unique-featured-wrapper" class="ak-store-unique-section">
+        <div class="ak-store-unique-header">
+            <h2 class="ak-store-unique-title">Best Selling Mobile Covers</h2>
+            <a href="mobile_covers" class="ak-store-unique-link">View All Covers →</a>
+        </div>
+
+        <div class="ak-store-unique-grid">
+            <div class="ak-store-unique-card">
+                <div class="ak-store-unique-badge ak-badge-hot">Hot</div>
+                <img class="ak-store-unique-img" src="https://m.media-amazon.com/images/I/81E1hAJyroL._SX522_.jpg"
+                    alt="Premium Leather iPhone 15 Pro Max Cover">
+                <h3 class="ak-store-unique-item-name">Premium Leather Covers</h3>
+                <p class="ak-store-unique-item-desc">Sleek & Stylish Designs</p>
+                <a href="mobile_covers" class="ak-store-unique-btn">Shop Now</a>
+            </div>
+
+            <div class="ak-store-unique-card">
+                <div class="ak-store-unique-badge ak-badge-sale">Sale</div>
+                <img class="ak-store-unique-img" src="https://m.media-amazon.com/images/I/61IDCGV20jL._SX522_.jpg"
+                    alt="Rugged Shockproof Case Samsung M36">
+                <h3 class="ak-store-unique-item-name">Shockproof Cases</h3>
+                <p class="ak-store-unique-item-desc">Extra Protection for your Phone</p>
+                <a href="mobile_covers" class="ak-store-unique-btn">Shop Now</a>
+            </div>
+
+            <div class="ak-store-unique-card">
+                <div class="ak-store-unique-badge ak-badge-new">New</div>
+                <img class="ak-store-unique-img" src="https://m.media-amazon.com/images/I/71Rrk+xbZSL._SX522_.jpg"
+                    alt="360 Protection Flip Cover Samsung">
+                <h3 class="ak-store-unique-item-name">Premium Flip Covers</h3>
+                <p class="ak-store-unique-item-desc">Complete 360° Protection</p>
+                <a href="mobile_covers" class="ak-store-unique-btn">Shop Now</a>
+            </div>
+        </div>
+    </section>
+
+
+
+    
     <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
     <footer>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
@@ -136,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
