--- a/blogs.html
+++ b/blogs.html
@@ -146,7 +146,10 @@
     </div>
 
 </div>
-
+<div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
+    <footer>
+        <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+    </footer>
   <script src="script.js"></script>
 </body>
 </html>
