--- a/blogs.html
+++ b/blogs.html
@@ -149,6 +149,7 @@
 <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
     <footer>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+        <div><a href="blogs">Our Blogs</a> </div>
     </footer>
   <script src="script.js"></script>
 </body>
