--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
     <footer>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+        <div><a href="blogs">Our Blogs</a> </div>
     </footer>
 
     
@@ -174,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
