--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ak Store | Home</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2430859977747394"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -175,6 +177,7 @@
 </body>
 
 </html>
+
 
 
 
