--- a/index.html
+++ b/index.html
@@ -175,17 +175,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     
-    <div class="back-to-top" onclick="window.scrollTo(0,0)"><i class="fa-solid fa-circle-chevron-up"></i></div>
-    <footer>
-        <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
-        <div><a href="blogs">Our Blogs</a> </div>
-    </footer>
+<?php include 'footer.php'; ?>
 
  <script src="https://kit.fontawesome.com/2ae29d8860.js" crossorigin="anonymous"></script>   
 <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
 
