--- a/index.html
+++ b/index.html
@@ -175,13 +175,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     
-<?php include 'footer.php'; ?>
+<jsp:include page="footer.jsp" />
+
 
  <script src="https://kit.fontawesome.com/2ae29d8860.js" crossorigin="anonymous"></script>   
 <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
 
