--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     
-<jsp:include page="footer.jsp" />
+<footer>
+    <div class="back-to-top" onclick="window.scrollTo(0,0)"><i class="fa-solid fa-circle-chevron-up"></i></div>
+        <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+        <div><a href="blogs">Our Blogs</a> </div>
+    </footer>
 
 
  <script src="https://kit.fontawesome.com/2ae29d8860.js" crossorigin="anonymous"></script>   
@@ -183,6 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
