--- a/chargers_cables.html
+++ b/chargers_cables.html
@@ -439,9 +439,10 @@
             
         </div>
     </div>
-    <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
-    <footer>
+<footer>
+    <div class="back-to-top" onclick="window.scrollTo(0,0)"><i class="fa-solid fa-circle-chevron-up"></i></div>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+        <div><a href="blogs">Our Blogs</a> </div>
     </footer>
     <script src="script1.js"></script>
 </body>
