--- a/chargers_cables.html
+++ b/chargers_cables.html
@@ -10,9 +10,21 @@
     <link rel="canonical" href="https://akgraphicsmedia.in/chargers_cables" />
     <link rel="icon" type="image/png" href="charger.svg">
     <link rel="stylesheet" href="style.css">
+
+      <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-THFD3LJZ');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body>
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THFD3LJZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
      <header>
         <div class="logo"><a href="/">AK<span>Store</span></a></div>
         
@@ -444,6 +456,9 @@
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
         <div><a href="blogs">Our Blogs</a> </div>
     </footer>
+
+
+ <script src="https://kit.fontawesome.com/2ae29d8860.js" crossorigin="anonymous"></script>   
     <script src="script1.js"></script>
 </body>
 
