--- a/mobile.html
+++ b/mobile.html
@@ -9,9 +9,20 @@
     <link rel="canonical" href="https://akgraphicsmedia.in/mobile" />
     <link rel="icon" type="image/png" href="iphone.png">
     <link rel="stylesheet" href="style.css">
+    
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-THFD3LJZ');</script>
+<!-- End Google Tag Manager -->
 </head>
-
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THFD3LJZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
      <header>
         <div class="logo"><a href="/">AK<span>Store</span></a></div>
         
@@ -404,15 +415,20 @@
             </a>
         </div>
     </div>
-    <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
-    <footer>
+   <footer>
+    <div class="back-to-top" onclick="window.scrollTo(0,0)"><i class="fa-solid fa-circle-chevron-up"></i></div>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
+        <div><a href="blogs">Our Blogs</a> </div>
     </footer>
+
+
+ <script src="https://kit.fontawesome.com/2ae29d8860.js" crossorigin="anonymous"></script>  
     <script src="script1.js"></script>
 </body>
 
 
 </html>
+
 
 
 
