--- a/chargers_cables.html
+++ b/chargers_cables.html
@@ -8,7 +8,7 @@
    <meta name="description" content="Buy original mobile chargers, USB cables, fast charging adapters and accessories at AK Store. Best quality mobile chargers & cables at affordable prices in India.">
 
     <link rel="canonical" href="https://akgraphicsmedia.in/chargers_cables" />
-    <link rel="icon" type="image/png" href="charger.svg">
+    <link rel="icon" type="image/svg" href="charger.svg">
     <link rel="stylesheet" href="style.css">
 
       <!-- Google Tag Manager -->
