--- a/blogs.html
+++ b/blogs.html
@@ -144,6 +144,100 @@
         <p>Thousands of premium products, one trusted name.</p>
         <a href="https://akgraphicsmedia.in" class="ak-btn-final">Visit AK Graphics Media Home</a>
     </div>
+<section class="akblog01" id="blogak01">
+    <h2>Graphics Design Kya Hai?</h2>
+    <p>
+        Graphics design ek creative process hai jisme images, text, colors aur layouts ka use karke
+        visual content banaya jata hai. Iska main goal hota hai message ko attractive aur clear
+        tareeke se communicate karna.
+    </p>
+</section>
+
+<section class="akblog02" id="blogak02">
+    <h2>Graphics Design Ki Importance</h2>
+    <ul>
+        <li>Brand identity strong banata hai</li>
+        <li>Marketing aur advertising ko effective karta hai</li>
+        <li>Website aur app user experience improve karta hai</li>
+        <li>Social media engagement badhata hai</li>
+    </ul>
+</section>
+
+<section class="akblog03" id="blogak03">
+    <h2>Graphics Designer Ke Tools</h2>
+
+    <h3>Adobe Photoshop</h3>
+    <p>
+        Adobe Photoshop photo editing aur creative designs ke liye sabse popular tool hai.
+        Posters, banners aur social media creatives ke liye widely use hota hai.
+    </p>
+
+    <h3>Adobe Illustrator</h3>
+    <p>
+        Illustrator vector-based software hai jo logo design, icons aur illustrations
+        ke liye use hota hai.
+    </p>
+
+    <h3>Canva</h3>
+    <p>
+        Canva beginners ke liye best tool hai. Ready-made templates ke saath
+        social media posts aur presentations easily banaye ja sakte hain.
+    </p>
+
+    <h3>CorelDRAW</h3>
+    <p>
+        CorelDRAW printing industry mein kaafi popular hai jaise visiting cards,
+        flex banners aur brochures design karne ke liye.
+    </p>
+
+    <h3>Figma</h3>
+    <p>
+        Figma ek modern UI/UX design tool hai jo websites aur mobile apps ke layouts
+        design karne ke liye use hota hai.
+    </p>
+</section>
+
+<section class="akblog04" id="blogak04">
+    <h2>Graphics Design Ke Types</h2>
+
+    <h3>Logo Design</h3>
+    <p>
+        Logo design brand ki pehchaan hoti hai. Ek achha logo simple, unique aur
+        easily recognizable hota hai.
+    </p>
+
+    <h3>Poster & Banner Design</h3>
+    <p>
+        Poster aur banner design advertising, events aur promotions ke liye
+        use kiya jata hai.
+    </p>
+
+    <h3>Social Media Graphics</h3>
+    <p>
+        Instagram posts, Facebook banners aur YouTube thumbnails
+        social media graphics ka hissa hote hain.
+    </p>
+
+    <h3>UI/UX Design</h3>
+    <p>
+        UI/UX design ka focus user-friendly interface aur smooth experience banana hota hai,
+        jo websites aur apps ke liye important hai.
+    </p>
+
+    <h3>Packaging Design</h3>
+    <p>
+        Packaging design product ko market mein alag pehchaan deta hai
+        aur customer ko attract karta hai.
+    </p>
+</section>
+
+<section class="akblog05" id="blogak05">
+    <h2>Career Scope in Graphics Design</h2>
+    <p>
+        Graphics design ek fast-growing career hai. Aap freelancing, agency job
+        ya apna design studio start kar sakte ho. Skills aur practice is field ki key hai.
+    </p>
+</section>
 
 </div>
 <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
