--- a/blogs.html
+++ b/blogs.html
@@ -139,105 +139,93 @@
         <p class="ak-detailed-text">Fashion at AK Graphics Media is about bold statements. We specialize in apparel that features high-fidelity graphic prints that do not fade or crack. Our fabrics are sourced for maximum breathability and comfort, ensuring that you look as good as you feel.</p>
     </section>
 
+<section class="ak-section-wrapper">
+    <h1 class="ak-category-header">Graphics Design: Creativity Meets Digital Power</h1>
+
+    <p class="ak-detailed-text">
+        Graphics design modern digital communication ka backbone ban chuka hai. Logos se lekar
+        websites aur social media tak, har jagah visual presentation ka role decisive hota hai.
+        <strong>AK Graphics Media</strong> mein hum graphics design ko sirf art nahi, balki ek
+        strategic tool ke roop mein dekhte hain jo brands ko identity aur visibility deta hai.
+    </p>
+
+    <h3 class="ak-sub-topic">Graphics Design Kya Hai?</h3>
+    <p class="ak-detailed-text">
+        Graphics design ek creative process hai jisme typography, images, colors aur layout ka
+        use karke meaningful visual content banaya jata hai. Iska main objective hota hai message
+        ko clear, attractive aur memorable banana, chahe wo marketing ke liye ho ya user experience
+        ke liye.
+    </p>
+
+    <h3 class="ak-sub-topic">Professional Graphics Designer Ke Tools</h3>
+    <p class="ak-detailed-text">
+        Ek skilled designer apne tools ke bina incomplete hota hai. Industry-standard tools jaise
+        <strong>Adobe Photoshop</strong> image editing ke liye, <strong>Adobe Illustrator</strong>
+        vector-based logo aur branding ke liye, <strong>Canva</strong> quick social media creatives
+        ke liye, <strong>CorelDRAW</strong> print design ke liye aur <strong>Figma</strong> UI/UX
+        design ke liye use kiye jaate hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Adobe Photoshop</h4>
+            <p>
+                Photo manipulation, banners, posters aur social media creatives ke liye
+                industry ka sabse trusted tool.
+            </p>
+        </div>
+
+        <div class="ak-info-card">
+            <h4>Adobe Illustrator</h4>
+            <p>
+                Logo design, icons aur scalable vector graphics ke liye perfect software
+                jo brand identity ko strong banata hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Graphics Design Ke Popular Types</h3>
+    <p class="ak-detailed-text">
+        Graphics design ke kai specialized areas hote hain. <strong>Logo design</strong> brand ki
+        pehchaan banata hai, <strong>poster aur banner design</strong> promotions ko boost karta hai,
+        <strong>social media graphics</strong> engagement badhate hain, <strong>UI/UX design</strong>
+        user experience improve karta hai aur <strong>packaging design</strong> products ko market
+        mein stand-out banata hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>UI/UX Design</h4>
+            <p>
+                Websites aur mobile apps ke liye user-friendly layouts aur smooth navigation
+                create karna UI/UX design ka core objective hota hai.
+            </p>
+        </div>
+
+        <div class="ak-info-card">
+            <h4>Packaging Design</h4>
+            <p>
+                Attractive packaging customers ko attract karti hai aur brand recall
+                ko multiple times increase karti hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Career Scope in Graphics Design</h3>
+    <p class="ak-detailed-text">
+        Graphics design ek fast-growing aur future-proof career option hai. Skilled designers
+        freelancing, digital agencies, corporate branding teams ya apna creative studio start
+        karke sustainable income generate kar sakte hain.
+    </p>
+</section>
+
+      
     <div id="ak-global-cta">
         <h2>Your Journey to Excellence Starts Here</h2>
         <p>Thousands of premium products, one trusted name.</p>
         <a href="https://akgraphicsmedia.in" class="ak-btn-final">Visit AK Graphics Media Home</a>
     </div>
-<section class="akblog01" id="blogak01">
-    <h2>Graphics Design Kya Hai?</h2>
-    <p>
-        Graphics design ek creative process hai jisme images, text, colors aur layouts ka use karke
-        visual content banaya jata hai. Iska main goal hota hai message ko attractive aur clear
-        tareeke se communicate karna.
-    </p>
-</section>
 
-<section class="akblog02" id="blogak02">
-    <h2>Graphics Design Ki Importance</h2>
-    <ul>
-        <li>Brand identity strong banata hai</li>
-        <li>Marketing aur advertising ko effective karta hai</li>
-        <li>Website aur app user experience improve karta hai</li>
-        <li>Social media engagement badhata hai</li>
-    </ul>
-</section>
-
-<section class="akblog03" id="blogak03">
-    <h2>Graphics Designer Ke Tools</h2>
-
-    <h3>Adobe Photoshop</h3>
-    <p>
-        Adobe Photoshop photo editing aur creative designs ke liye sabse popular tool hai.
-        Posters, banners aur social media creatives ke liye widely use hota hai.
-    </p>
-
-    <h3>Adobe Illustrator</h3>
-    <p>
-        Illustrator vector-based software hai jo logo design, icons aur illustrations
-        ke liye use hota hai.
-    </p>
-
-    <h3>Canva</h3>
-    <p>
-        Canva beginners ke liye best tool hai. Ready-made templates ke saath
-        social media posts aur presentations easily banaye ja sakte hain.
-    </p>
-
-    <h3>CorelDRAW</h3>
-    <p>
-        CorelDRAW printing industry mein kaafi popular hai jaise visiting cards,
-        flex banners aur brochures design karne ke liye.
-    </p>
-
-    <h3>Figma</h3>
-    <p>
-        Figma ek modern UI/UX design tool hai jo websites aur mobile apps ke layouts
-        design karne ke liye use hota hai.
-    </p>
-</section>
-
-<section class="akblog04" id="blogak04">
-    <h2>Graphics Design Ke Types</h2>
-
-    <h3>Logo Design</h3>
-    <p>
-        Logo design brand ki pehchaan hoti hai. Ek achha logo simple, unique aur
-        easily recognizable hota hai.
-    </p>
-
-    <h3>Poster & Banner Design</h3>
-    <p>
-        Poster aur banner design advertising, events aur promotions ke liye
-        use kiya jata hai.
-    </p>
-
-    <h3>Social Media Graphics</h3>
-    <p>
-        Instagram posts, Facebook banners aur YouTube thumbnails
-        social media graphics ka hissa hote hain.
-    </p>
-
-    <h3>UI/UX Design</h3>
-    <p>
-        UI/UX design ka focus user-friendly interface aur smooth experience banana hota hai,
-        jo websites aur apps ke liye important hai.
-    </p>
-
-    <h3>Packaging Design</h3>
-    <p>
-        Packaging design product ko market mein alag pehchaan deta hai
-        aur customer ko attract karta hai.
-    </p>
-</section>
-
-<section class="akblog05" id="blogak05">
-    <h2>Career Scope in Graphics Design</h2>
-    <p>
-        Graphics design ek fast-growing career hai. Aap freelancing, agency job
-        ya apna design studio start kar sakte ho. Skills aur practice is field ki key hai.
-    </p>
-</section>
 
 </div>
 <div class="back-to-top" onclick="window.scrollTo(0,0)">Back to top</div>
