--- a/index.html
+++ b/index.html
@@ -837,7 +837,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
 <!-- End Blog -->
+<!-- Ads Run Here  -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2430859977747394"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-2430859977747394"
+     data-ad-slot="7447505200"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
+    <!-- Ads Finish -->
 
     
 <footer>
@@ -852,6 +864,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
