--- a/mobile.html
+++ b/mobile.html
@@ -415,6 +415,122 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div>
     </div>
+
+<section class="ak-section-wrapper">
+    <h1 class="ak-category-header">Latest Mobile Phones & Smartphone Technology Guide</h1>
+
+    <p class="ak-detailed-text">
+        Aaj ke digital era mein mobile phones sirf communication tool nahi rahe,
+        balki daily life ka ek important hissa ban chuke hain.
+        Smartphones ne camera, internet, gaming, payments aur productivity
+        sab kuch ek hi device mein possible bana diya hai.
+    </p>
+
+    <h3 class="ak-sub-topic">Smartphone Types & Categories</h3>
+    <p class="ak-detailed-text">
+        Market mein alag-alag budget aur usage ke according smartphones available hain.
+        Entry-level phones daily calling aur basic apps ke liye hote hain,
+        jabki flagship smartphones high performance aur premium features offer karte hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Budget Smartphones</h4>
+            <p>
+                Affordable mobiles jo daily usage, social media aur light gaming ke liye perfect hote hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Flagship Phones</h4>
+            <p>
+                Premium design, powerful processor aur advanced camera technology ke saath aate hain.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Performance & Processors</h3>
+    <p class="ak-detailed-text">
+        Smartphone ka performance uske processor par depend karta hai.
+        Qualcomm Snapdragon, MediaTek aur Apple Bionic jaise chipsets
+        fast multitasking aur smooth gaming experience provide karte hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>High-Speed Performance</h4>
+            <p>
+                Fast processors aur sufficient RAM se lag-free aur smooth user experience milta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Gaming Experience</h4>
+            <p>
+                Powerful GPU aur high refresh rate display gaming ko next level par le jata hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Camera & Photography Features</h3>
+    <p class="ak-detailed-text">
+        Aaj ke smartphones advanced camera systems ke saath aate hain —
+        high-resolution sensors, night mode, AI photography aur 4K video recording.
+        Mobile photography ab professional level tak pahunch chuki hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Multi-Lens Cameras</h4>
+            <p>
+                Wide, ultra-wide aur telephoto lenses se har situation mein perfect shots milte hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>AI Camera Features</h4>
+            <p>
+                AI scene detection aur portrait modes photos ko aur bhi impressive banate hain.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Battery Life & Fast Charging</h3>
+    <p class="ak-detailed-text">
+        Long battery life smartphone ka ek important factor hai.
+        Fast charging aur power-efficient processors ki wajah se
+        users ko all-day usage ka confidence milta hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Long Battery Backup</h4>
+            <p>
+                High-capacity batteries se ek hi charge par poora din mobile use kiya ja sakta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Fast & Wireless Charging</h4>
+            <p>
+                Quick charging technology time save karti hai aur convenience badhati hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Software & Security</h3>
+    <p class="ak-detailed-text">
+        Android aur iOS jaise operating systems smooth interface aur regular updates provide karte hain.
+        Security features jaise fingerprint, face unlock aur data encryption user data ko safe rakhte hain.
+    </p>
+
+    <h3 class="ak-sub-topic">Choosing the Right Smartphone</h3>
+    <p class="ak-detailed-text">
+        Smartphone choose karte waqt budget, usage, camera, battery aur performance
+        jaise factors ko consider karna chahiye. Sahi mobile aapki productivity,
+        entertainment aur connectivity ko kaafi improve kar sakta hai.
+    </p>
+</section>
+
+
+
+    
    <footer>
     <div class="back-to-top" onclick="window.scrollTo(0,0)"><i class="fa-solid fa-circle-chevron-up"></i></div>
         <p>© 2026, Akgraphicsmedia.in. All rights reserved.</p>
@@ -428,6 +544,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </html>
+
 
 
 
